--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-37) bionic; urgency=medium
+
+  * version fname
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Wed, 29 Jun 2022 15:45:38 +0300
+
 actionswf (1-1.37) bionic; urgency=medium
 
   * safe write
