--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-38) bionic; urgency=medium
+
+  * changes
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Wed, 29 Jun 2022 16:01:14 +0300
+
 actionswf (1-37) bionic; urgency=medium
 
   * version fname
