--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-40) bionic; urgency=medium
+
+  * Makefile order
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Tue, 16 Aug 2022 06:44:27 +0300
+
 actionswf (1-39) bionic; urgency=medium
 
   * Memory wrong code fix
