--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-42) bionic; urgency=medium
+
+  * 64
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Wed, 31 Aug 2022 09:21:31 +0300
+
 actionswf (1-41) bionic; urgency=medium
 
   * Not parallel?
