--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-44) bionic; urgency=medium
+
+  * 64
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Thu, 01 Sep 2022 15:21:37 +0300
+
 actionswf (1-43) bionic; urgency=medium
 
   * 64 ocomp i386
