on lp not having fun with example

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-45) bionic; urgency=medium
+
+  * on lp not having fun with example
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Thu, 01 Sep 2022 15:52:03 +0300
+
 actionswf (1-44) bionic; urgency=medium
 
   * 64
