--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-46) bionic; urgency=medium
+
+  * optimizations
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Wed, 07 Sep 2022 08:31:56 +0300
+
 actionswf (1-45) bionic; urgency=medium
 
   * on lp not having fun with example
