--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-48) bionic; urgency=medium
+
+  * some bultin functions, including play...gotoAndPlay...trace
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Fri, 04 Nov 2022 09:45:32 +0200
+
 actionswf (1-47) bionic; urgency=medium
 
   * fix a sv
