--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-53) bionic; urgency=medium
+
+  * some 64 migrations
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Tue, 08 Nov 2022 15:09:41 +0200
+
 actionswf (1-52) bionic; urgency=medium
 
   * cc instead of ld for elf problems
