--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-54) bionic; urgency=medium
+
+  * another 64 migration
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Wed, 09 Nov 2022 07:09:22 +0200
+
 actionswf (1-53) bionic; urgency=medium
 
   * some 64 migrations
