--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-56) bionic; urgency=medium
+
+  * the next 64 migration at "for in"
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Sat, 12 Nov 2022 08:06:36 +0200
+
 actionswf (1-55) bionic; urgency=medium
 
   * readd i386
