fix built-in inside built-in

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-57) bionic; urgency=medium
+
+  * fix built-in inside built-in
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Sun, 20 Nov 2022 12:14:15 +0200
+
 actionswf (1-56) bionic; urgency=medium
 
   * the next 64 migration at "for in"
