--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-58) bionic; urgency=medium
+
+  * error there must be throwable
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Sun, 27 Nov 2022 06:30:43 +0200
+
 actionswf (1-57) bionic; urgency=medium
 
   * fix built-in inside built-in
