--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-59) bionic; urgency=medium
+
+  * placeobject_coords x and y int for c
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Fri, 09 Dec 2022 14:18:57 +0200
+
 actionswf (1-58) bionic; urgency=medium
 
   * error there must be throwable
