--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+actionswf (1-60) bionic; urgency=medium
+
+  * counting was wrong there
+
+ -- bc <bc@bc-HP-Pavilion-x360-Convertible>  Mon, 12 Dec 2022 14:43:41 +0200
+
 actionswf (1-59) bionic; urgency=medium
 
   * placeobject_coords x and y int for c
